--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ejc": "^1.0.4",
+    "ejc": "^1.0.0",
     "express": "^4.18.2",
-    "firebase": "^10.7.2"
+    "firebase": "^10.8.0",
+    "firebase-admin": "^12.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
